# HavilahAI

./: AGENTS.md  LICENSE  README.md  docker-compose.yml  render.yaml
backend/: .env.example  BACKEND_IMPLEMENTATION.md  Dockerfile  PRESENTATION_TO_BACKEND_TRACEABILITY.md  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/api_v1/: router.py
backend/app/api/routes/: auth.py  chat.py  content.py  dashboard.py  debug.py  flashcards.py  goals.py  learning_feed.py  ocr.py  progress.py  quiz.py  topics.py  uploads.py
backend/app/core/: config.py  events.py  security.py
backend/app/crud/: user.py
backend/app/db/: base.py  session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 19ecb4c4875b_create_users_table.py  202502031200_add_topics_modules.py  (+3 more)
backend/app/models/: __init__.py  chat.py  feed_interaction.py  flashcard_attempt.py  goal.py  quiz_attempt.py  topic.py  upload.py  user.py
backend/app/schemas/: chat.py  content.py  dashboard.py  feed.py  flashcards.py  goals.py  ocr.py  progress.py  quiz.py  topics.py  upload.py  user.py
backend/app/services/: __init__.py  ai_client.py  chat_tutor.py  content_pipeline.py  demo_content.py  file_storage.py  learning_assets.py  learning_feed.py  ocr.py  quiz_generator.py  realtime_events.py  text_simplifier.py  topic_generator.py
backend/app/worker/: celery_app.py  tasks.py
backend/core/: config.py
backend/tests/api/: conftest.py  test_auth.py  test_content_pipeline.py  test_frontend_endpoints.py  test_ocr.py  test_uploads.py
(+40 files in other folders)
